# SMPlayer2

./: CMakeLists.txt  Makefile  smplayer2.desktop  smplayer2_enqueue.desktop  version.sh
cmake/: FindQuazip.cmake  Summary.cmake
icons/: CMakeLists.txt
src/: CMakeLists.txt  about.cpp  about.h  about.ui  actionseditor.cpp  actionseditor.h  assstyles.cpp  assstyles.h  audioequalizer.cpp  audioequalizer.h  audioequalizerlist.h  basegui.cpp  basegui.h  baseguiplus.cpp  baseguiplus.h  clhelp.cpp  clhelp.h  colorutils.cpp  colorutils.h  config.h  constants.h  core.cpp  core.h  defaultgui.cpp  defaultgui.h  desktopinfo.cpp  desktopinfo.h  deviceinfo.cpp  deviceinfo.h  discname.cpp  discname.h  eqslider.cpp  eqslider.h  errordialog.cpp  errordialog.h  errordialog.ui  extensions.cpp  extensions.h  favoriteeditor.cpp  favoriteeditor.h  (+165 more)
src/corelib/: smplayer2core.pro  smplayer2corelib.cpp  smplayer2corelib.h
src/findsubtitles/: findsubtitles.pro  findsubtitlesconfigdialog.cpp  findsubtitlesconfigdialog.h  findsubtitleswindow.cpp  findsubtitleswindow.h  main.cpp  osparser.cpp  osparser.h  simplehttp.cpp  simplehttp.h  subchooserdialog.cpp  subchooserdialog.h
src/findsubtitles/filedownloader/: filedownloader.cpp  filedownloader.h
src/mpcgui/: mpcgui.cpp  mpcgui.h  mpcstyles.cpp  mpcstyles.h
src/shortcuts/: default.keys  sda.keys
src/testcorelib/: test.cpp  test.h  test.pro  test2.cpp
src/translations/: smplayer2_ar_SY.ts  smplayer2_bg.ts  smplayer2_ca.ts  smplayer2_cs.ts  smplayer2_da.ts  smplayer2_de.ts  smplayer2_el_GR.ts  smplayer2_en_US.ts  smplayer2_es.ts  smplayer2_et.ts  smplayer2_eu.ts  smplayer2_fi.ts  smplayer2_fr.ts  smplayer2_gl.ts  smplayer2_hu.ts  smplayer2_it.ts  smplayer2_ja.ts  smplayer2_ka.ts  smplayer2_ko.ts  smplayer2_ku.ts  smplayer2_lt.ts  smplayer2_mk.ts  smplayer2_nl.ts  smplayer2_pl.ts  smplayer2_pt.ts  smplayer2_pt_BR.ts  smplayer2_ro_RO.ts  smplayer2_ru_RU.ts  smplayer2_sk.ts  smplayer2_sl_SI.ts  smplayer2_sr.ts  smplayer2_sv.ts  smplayer2_tr.ts  smplayer2_uk_UA.ts  smplayer2_vi_VN.ts  smplayer2_zh_CN.ts  smplayer2_zh_TW.ts
src/videopreview/: main.cpp  videopreview.cpp  videopreview.h  videopreviewconfigdialog.cpp  videopreviewconfigdialog.h
