install(FILES smplayer2_icon16.png
DESTINATION share/icons/hicolor/16x16/apps/
RENAME application-x-smplayer2.png
)
install(FILES smplayer2_icon22.png
DESTINATION share/icons/hicolor/22x22/apps/
RENAME application-x-smplayer2.png
)
install(FILES smplayer2_icon32.png
DESTINATION share/icons/hicolor/32x32/apps/
RENAME application-x-smplayer2.png
)
install(FILES smplayer2_icon64.png
DESTINATION share/icons/hicolor/64x64/apps/
RENAME application-x-smplayer2.png
)
